# RadioStream

./: .clang-format  .clang-tidy  .travis.yml  CHANGELOG.md  CMakeLists.txt  CMakeSetup.rc  Dockerfile  LICENSE  README.md  RadioStream.desktop  config.json  project_sources.py
.github/workflows/: cmake.yml
cmake/: DownloadDependencies.cmake  RadioStreamVersion.hpp.in  SetupDependencies.cmake
docs/: build.md
docs/architecture/: design.md  events.md  states.md  stream.md
include/: Application.hpp  ApplicationDirectories.hpp  Config.hpp  Constants.hpp  Events.hpp  Language.hpp  MainState.hpp  Observer.hpp  RadioBrowserRequester.hpp  RadioBrowserStation.hpp  State.hpp  StateIdentifiers.hpp  StatesManager.hpp  Station.hpp  StationPlayer.hpp  StationsDatabase.hpp  StationsManager.hpp  StatusBar.hpp  StreamManager.hpp  StreamURIResolver.hpp  Subject.hpp  TextLocalizer.hpp  Utilities.hpp
include/controllers/: ConfigController.hpp  Controller.hpp  RadioBrowserRequesterController.hpp  StationPlayerController.hpp  StationsDatabaseController.hpp  StatusBarController.hpp  StreamManagerController.hpp
include/exceptions/: CouldNotMakeReader.hpp  LanguageFileNotFound.hpp  NanaTextboxProcessingException.hpp  NotSupportedLanguageException.hpp  ReaderCouldNotReadUrl.hpp  WrongLanguageCodeFormatException.hpp
include/multimedia_playlists/: HTTPDownloader.hpp  HTTPMultimediaPlaylistsDownlader.hpp  M3UReader.hpp  MultimediaPlaylistReader.hpp  MultimediaPlaylistReaderFactory.hpp  PLSReader.hpp  PocoHTTPDownloader.hpp
include/observers/: ConfigControllerObserver.hpp  ConfigObserver.hpp  Events.hpp  MainStateObserver.hpp  Observer.hpp  RadioBrowserRequesterControllerObserver.hpp  SearchStateObserver.hpp  StationPlayerControllerObserver.hpp  StationPlayerObserver.hpp  StationsDatabaseControllerObserver.hpp  StationsDatabaseObserver.hpp  StationsObserver.hpp  StatusBarControllerObserver.hpp  StatusObserver.hpp  StreamManagerObserver.hpp  StreamObserver.hpp  Subject.hpp  TextLocalizerObserver.hpp
include/states/: AboutState.hpp  MainState.hpp  SearchState.hpp  State.hpp  StateIdentifiers.hpp  StatesManager.hpp  ToolsState.hpp
include/widgets/: StationListbox.hpp
lang/: en.po  pl.po
src/: Application.cpp  ApplicationDirectories.cpp  Config.cpp  Constants.cpp  Language.cpp  MainState.cpp  Observer.cpp  RadioBrowserRequester.cpp  RadioBrowserStationcpp.cpp  State.cpp  StatesManager.cpp  Station.cpp  StationPlayer.cpp  StationsDatabase.cpp  StationsManager.cpp  StatusBar.cpp  StreamManager.cpp  StreamURIResolver.cpp  Subject.cpp  TextLocalizer.cpp  Utilities.cpp  main.cpp
src/controllers/: ConfigController.cpp  Controller.cpp  RadioBrowserRequesterController.cpp  StationPlayerController.cpp  StationsDatabaseController.cpp  StatusBarController.cpp  StreamManagerController.cpp
src/exceptions/: CouldNotMakeReader.cpp  LanguageFileNotFound.cpp  NanaTextboxProcessingException.cpp  NotSupportedLanguageException.cpp  ReaderCouldNotReadUrl.cpp  WrongLanguageCodeFormatException.cpp
src/multimedia_playlists/: M3UReader.cpp  MultimediaPlaylistReaderFactory.cpp  PLSReader.cpp  PocoHTTPDownloader.cpp
src/observers/: ConfigControllerObserver.cpp  ConfigObserver.cpp  MainStateObserver.cpp  Observer.cpp  RadioBrowserRequesterControllerObserver.cpp  SearchStateObserver.cpp  StationPlayerControllerObserver.cpp  StationPlayerObserver.cpp  StationsDatabaseControllerObserver.cpp  StationsDatabaseObserver.cpp  StationsObserver.cpp  StatusBarControllerObserver.cpp  StatusObserver.cpp  StreamManagerObserver.cpp  StreamObserver.cpp  Subject.cpp  TextLocalizerObserver.cpp
src/states/: AboutState.cpp  MainState.cpp  SearchState.cpp  State.cpp  StatesManager.cpp  ToolsState.cpp
src/widgets/: StationListbox.cpp
